# vortai

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt  run-dev.sh  setup.sh  static_app.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/release/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml
api/: generate-image.py  generate-with-thinking.py  generate-with-url-context.py  generate.py  index.py  text-to-speech.py
cython_ext/: text_utils.c  text_utils.pyx
deploy/static/web/static/js/: main.js
deploy/static/web/static/ts/: tsconfig.json
deploy/vercel/: vercel.json
docs/: api-examples.md  imagen-integration.md  testing.md  troubleshooting.md  tts-internals.md
docs/security/: README.md
docs/security/pocs/: PoC.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  CookieNotification.tsx  Header.tsx  ImageContainer.tsx  MenuOverlay.tsx  ResponseContainer.tsx  SearchInterface.tsx  SidebarMenu.tsx  TTSButton.tsx  ThinkingContainer.tsx
go/src/: main.go
public/: index.html
public/static/css/: style.css
scripts/: run-dev.sh  setup.sh
shell/: run-dev.sh
tests/: test_app.py
tests/integration/: test_smoke.py
vortai/: __init__.py  __main__.py  image_providers.py  models.py  sdk.py
vortai/extensions/: cache.py
vortai/routes/: api.py
vortai/rust_ext/: Cargo.toml
vortai/rust_ext/src/: lib.rs
web/static/css/: main.css
web/static/js/: main.js
web/static/ts/: main.ts  tsconfig.json
web/templates/: index.html
